[package]
name = "rust_head"
version = "0.1.0"
edition = "2021"
description = "Head but in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0"
